tests/toy/neg/001671_mutation.toylang
program a = { while a var a : bool sleep; } .
